Bug 282889 - Kontact (KMail) crash with proxy
Summary: Kontact (KMail) crash with proxy
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 281402 295387 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-09-27 07:14 UTC by Marco Clemencic
Modified: 2012-03-13 11:42 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Clemencic 2011-09-27 07:14:25 UTC
Application: kontact (4.4.10)
KDE Platform Version: 4.7.1 (4.7.1)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-11-generic x86_64
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:

I clicked the button to check for new mails.

- Custom settings of the application:

I have enabled a proxy server in the system configuration using a .pac file.
I might be that the proxy server is not well configured, but it works for http and https.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fed4841c7a0 (LWP 2698))]

Thread 3 (Thread 0x7fed2773b700 (LWP 2917)):
#0  0x00007fed45877f03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fed3f2ed104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fed3f2ed9f2 in g_main_loop_run () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fed28852c44 in ?? () from /usr/lib/x86_64-linux-gnu/libgio-2.0.so.0
#4  0x00007fed3f3143e4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007fed3f7b8d8c in start_thread (arg=0x7fed2773b700) at pthread_create.c:304
#6  0x00007fed4588504d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fed27f3c700 (LWP 3005)):
#0  0x00007fed45877f03 in __poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=<value optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fed3f2ed104 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fed3f2ed639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fed45fbf446 in QEventDispatcherGlib::processEvents (this=0x4edeec0, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007fed45f93882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fed45f93abc in QEventLoop::exec (this=0x7fed27f3bdb0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007fed45eaa924 in QThread::exec (this=<value optimized out>) at thread/qthread.cpp:492
#7  0x00007fed45f75c2f in QInotifyFileSystemWatcherEngine::run (this=0x52e25e0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fed45ead175 in QThreadPrivate::start (arg=0x52e25e0) at thread/qthread_unix.cpp:320
#9  0x00007fed3f7b8d8c in start_thread (arg=0x7fed27f3c700) at pthread_create.c:304
#10 0x00007fed4588504d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fed4841c7a0 (LWP 2698)):
[KCrash Handler]
#6  detach (this=0x0, job=0x5691b10) at /usr/include/qt4/QtCore/qhash.h:299
#7  operator[] (this=0x0, job=0x5691b10) at /usr/include/qt4/QtCore/qhash.h:738
#8  KIO::ProtoQueue::removeJob (this=0x0, job=0x5691b10) at ../../kio/kio/scheduler.cpp:483
#9  0x00007fed444437a7 in KIO::SchedulerPrivate::assignJobToSlave (this=<value optimized out>, slave=0x4d20810, job=0x5691b10) at ../../kio/kio/scheduler.cpp:1273
#10 0x00007fed444438b2 in KIO::Scheduler::assignJobToSlave (slave=0x4d20810, job=0x5691b10) at ../../kio/kio/scheduler.cpp:841
#11 0x00007fed2b690877 in KMail::PopAccount::connectJob (this=<value optimized out>) at ../../kmail/popaccount.cpp:279
#12 0x00007fed2b692f43 in KMail::PopAccount::startJob (this=0x3b2bf00) at ../../kmail/popaccount.cpp:414
#13 0x00007fed2b699a19 in KMail::PopAccount::processNewMail (this=0x3b2bf00, _interactive=true) at ../../kmail/popaccount.cpp:196
#14 0x00007fed2b5de9c4 in KMail::AccountManager::processNextCheck (this=0x3267ba0, _newMail=<value optimized out>) at ../../kmail/accountmanager.cpp:231
#15 0x00007fed2b5df30a in KMail::AccountManager::singleCheckMail (this=0x3267ba0, account=0x3b2bf00, interactive=<value optimized out>) at ../../kmail/accountmanager.cpp:157
#16 0x00007fed2b5e06a2 in KMail::AccountManager::checkMail (this=0x3267ba0, _interactive=true) at ../../kmail/accountmanager.cpp:353
#17 0x00007fed2b77b1d2 in KMMainWidget::qt_metacall (this=0x3b53300, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0x7fff8e6f4560) at ./kmmainwidget.moc:363
#18 0x00007fed45fa95f8 in QMetaObject::activate (sender=0x3cc9f70, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff8e6f4560) at kernel/qobject.cpp:3287
#19 0x00007fed4694a122 in QAction::triggered (this=<value optimized out>, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#20 0x00007fed4694a30f in QAction::activate (this=0x3cc9f70, event=<value optimized out>) at kernel/qaction.cpp:1257
#21 0x00007fed46d1346a in QAbstractButtonPrivate::click (this=0x3f59bb0) at widgets/qabstractbutton.cpp:528
#22 0x00007fed46d1371c in QAbstractButton::mouseReleaseEvent (this=0x533d5e0, e=0x7fff8e6f4eb0) at widgets/qabstractbutton.cpp:1121
#23 0x00007fed46dcf9ba in QToolButton::mouseReleaseEvent (this=<value optimized out>, e=<value optimized out>) at widgets/qtoolbutton.cpp:721
#24 0x00007fed469a1cc8 in QWidget::event (this=0x533d5e0, event=0x7fff8e6f4eb0) at kernel/qwidget.cpp:8259
#25 0x00007fed469509f4 in QApplicationPrivate::notify_helper (this=0x2299150, receiver=0x533d5e0, e=0x7fff8e6f4eb0) at kernel/qapplication.cpp:4462
#26 0x00007fed46955dc3 in QApplication::notify (this=<value optimized out>, receiver=0x533d5e0, e=0x7fff8e6f4eb0) at kernel/qapplication.cpp:4023
#27 0x00007fed47660b86 in KApplication::notify (this=0x7fff8e6f5b70, receiver=0x533d5e0, event=0x7fff8e6f4eb0) at ../../kdeui/kernel/kapplication.cpp:311
#28 0x00007fed45f9449c in QCoreApplication::notifyInternal (this=0x7fff8e6f5b70, receiver=0x533d5e0, event=0x7fff8e6f4eb0) at kernel/qcoreapplication.cpp:731
#29 0x00007fed46951a1d in sendEvent (receiver=0x533d5e0, event=0x7fff8e6f4eb0, alienWidget=0x533d5e0, nativeWidget=0x27b8f70, buttonDown=0x7fed47434218, lastMouseReceiver=..., spontaneous=true) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#30 QApplicationPrivate::sendMouseEvent (receiver=0x533d5e0, event=0x7fff8e6f4eb0, alienWidget=0x533d5e0, nativeWidget=0x27b8f70, buttonDown=0x7fed47434218, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3122
#31 0x00007fed469d3190 in QETWidget::translateMouseEvent (this=0x27b8f70, event=<value optimized out>) at kernel/qapplication_x11.cpp:4558
#32 0x00007fed469d1ab7 in QApplication::x11ProcessEvent (this=0x7fff8e6f5b70, event=0x7fff8e6f5800) at kernel/qapplication_x11.cpp:3680
#33 0x00007fed469fa842 in x11EventSourceDispatch (s=0x22a1ad0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#34 0x00007fed3f2ecbcd in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fed3f2ed3a8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fed3f2ed639 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#37 0x00007fed45fbf3ef in QEventDispatcherGlib::processEvents (this=0x223f370, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#38 0x00007fed469fa4de in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00007fed45f93882 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#40 0x00007fed45f93abc in QEventLoop::exec (this=0x7fff8e6f5b00, flags=...) at kernel/qeventloop.cpp:201
#41 0x00007fed45f97ecb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#42 0x0000000000403f70 in main (argc=3, argv=<value optimized out>) at ../../../kontact/src/main.cpp:226

Possible duplicates by query: bug 281402.

Reported using DrKonqi
Comment 1 gaucho 2012-01-14 19:15:25 UTC
I clicked the button to check for new mails and kmail crash too
Debian SID
KDE 4.7.4
Kmail 1.13.7

Application: KMail (kmail), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/i686/cmov/libthread_db.so.1".
[KCrash Handler]
#7  0xb53c66b4 in ?? () from /usr/lib/libkio.so.5
#8  0x00000000 in ?? ()
Comment 2 Pino Toscano 2012-03-09 12:52:51 UTC
*** Bug 281402 has been marked as a duplicate of this bug. ***
Comment 3 Pino Toscano 2012-03-09 12:53:05 UTC
*** Bug 295387 has been marked as a duplicate of this bug. ***
Comment 4 Pino Toscano 2012-03-09 15:22:44 UTC
Git commit d1edc0f038818a073488f6a1822cfb01d43d67e4 by Pino Toscano.
Committed on 09/03/2012 at 16:16.
Pushed by pino into branch 'KDE/4.8'.

better check for return values of m_protocols.value(...)

This is a better fix for such situation in SchedulerPrivate::assignJobToSlave(), as a followup of
777f69880989d87adfe3011cf0b8db93f70a626c
FIXED-IN: 4.8.2

M  +5    -2    kio/kio/scheduler.cpp

http://commits.kde.org/kdelibs/d1edc0f038818a073488f6a1822cfb01d43d67e4