better check for return values of m_protocols.value(...)

This is a better fix for such situation in SchedulerPrivate::assignJobToSlave(), as a followup of
777f69880989d87adfe3011cf0b8db93f70a626c

BUG: 282889
FIXED-IN: 4.8.2